changes in chatroom fixed height and alignment

--- a/app/assets/stylesheets/components/_buttons.scss
+++ b/app/assets/stylesheets/components/_buttons.scss
@@ -224,3 +224,7 @@ svg {
 #inv {
   opacity: 1;
 }
+#send {
+  margin-top: -14px;
+  margin-left: 8px;
+}
