--- a/app/assets/stylesheets/components/_chat.scss
+++ b/app/assets/stylesheets/components/_chat.scss
@@ -1,3 +1,16 @@
+.back {
+  width: 100px;
+  height: 100px;
+  position: absolute;
+  border-radius: 50%;
+  left: 24px;
+  top: 45px;
+}
+
+.chatroom {
+  position: relative;
+}
+
 .chat {
   background: white;
   margin-top: 9px;
